<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnFechar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TextViews para exibir cada parágrafo -->
            <TextView
                android:id="@+id/txtTermos1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_1"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_2"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_3"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_4"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_5"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_6"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_7"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_8"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_9"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_10"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_11"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txtTermos12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos_12"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="16dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnFechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/paytone_one"
        android:background="@drawable/bordaarredondadabotao"
        android:text="Fechar"
        app:backgroundTint="@color/primary_color"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
