<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.acolhe.app.fragments.Missoes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVwTituloMissoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/tituloMissoesDiaria"
            android:textColor="@color/secondary_color"
            android:textSize="48sp"
            android:textStyle="bold"
            app:lineHeight="40dp" />

        <TextView
            android:id="@+id/txtVwSubtituloMissoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/subtituloMissoesDiaria"
            android:textColor="@color/background_colorInicial"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lnrLytMissoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordaarredondadamissoes"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnrLytMissao1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtVwNmMissao1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nomeMissao1"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtVwDescricao1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descricaoMissao1"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/chckBxCheckBox1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnrLytMissao2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordaarredondadamissoes"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtVwNmMissao2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nomeMissao1"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtVwDescricao2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descricaoMissao1"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/chckBxCheckbox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@tools:sample/avatars"
            tools:srcCompat="@drawable/personagens" />
    </LinearLayout>
</FrameLayout>