<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bordaarredondadaclinica"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bordaarredondadaclinica"
        android:minHeight="140dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgVwClinica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:src="@drawable/imagemclinicadefault" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtVwNmClinica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="2dp"
                    android:text="@string/nomeClinica"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ImgVwInformacao"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/iconeinformacao" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtVwLocalClinica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/localClinica"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgVwEstrela1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:src="@drawable/estrelacheia" />

                <ImageView
                    android:id="@+id/imgVwEstrela2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:src="@drawable/estrelacheia" />

                <ImageView
                    android:id="@+id/imgVwEstrela3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:src="@drawable/estrelacheia" />

                <ImageView
                    android:id="@+id/imgVwEstrela4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:src="@drawable/estrelacheia" />

                <ImageView
                    android:id="@+id/imgVwEstrela5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:src="@drawable/estrelavazia" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrLytInformacaoExtra"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bordaarredondadatopicosconteudoclinicas"
                android:padding="5dp"
                android:text="@string/tituloDescricaoClinicas"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/conteudoDescricaoClinicas" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bordaarredondadatopicosconteudoclinicas"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="@color/text_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>